--- a/assets/styles/organisms/nav.scss
+++ b/assets/styles/organisms/nav.scss
@@ -60,6 +60,10 @@
   left: 0;
 }
 
+.js-nav-is-open {
+  overflow: hidden;
+}
+
 @media screen and (min-width: 768px) {
   .navbar-toggler {
     display: none;
